--- a/index.html
+++ b/index.html
@@ -133,9 +133,11 @@ function hashChanged() {
 	}
 }
 $(document).on(':passageend', function () { hashChanged(); });
-/* Anchor Link to Passage - End */</script><tw-passagedata pid="1" name="我家" tags="" position="901,399" size="100,100">
+/* Anchor Link to Passage - End */</script><tw-passagedata pid="1" name="我家" tags="" position="901,400" size="100,100">
 [[便利店]]
 [[公園]]
+
+[[掃QRCODE|scanqr]]
 
 &lt;em&gt;粗體&lt;/em&gt;
 &#39;&#39;粗體&#39;&#39;
