--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@ You see a &lt;&lt;linkprepend &quot;robot&quot;&gt;&gt;GIANT &lt;&lt;/linkprepen
 
 買下他。
 </tw-passagedata><tw-passagedata pid="5" name="StoryInit" tags="" position="500,400" size="100,100">&lt;&lt;set $hp to 10&gt;&gt;
-</tw-passagedata><tw-passagedata pid="6" name="scanqr" tags="" position="701,201.5" size="100,100">&lt;&lt;run Dialog.setup(&quot;支線碎片&quot;)&gt;&gt;
-&lt;&lt;run Dialog.wiki(&#39;你得到了碎片&lt;br&gt; &lt;&lt;button &quot;確定&quot;&gt;&gt;&lt;&lt;run window.close()&gt;&gt;&lt;&lt;/button&gt;&gt;&#39;)&gt;&gt;
+</tw-passagedata><tw-passagedata pid="6" name="scanqr" tags="" position="701,200.5" size="100,100">&lt;&lt;run Dialog.setup(&quot;支線碎片&quot;)&gt;&gt;
+&lt;&lt;run Dialog.wiki(&#39;你得到了碎片&lt;br&gt; &lt;&lt;button &quot;確定&quot;&gt;&gt;&lt;&lt;script&gt;&gt;window.close()&lt;&lt;/script&gt;&gt;&lt;&lt;/button&gt;&gt;&#39;)&gt;&gt;
 &lt;&lt;run Dialog.open()&gt;&gt;</tw-passagedata><tw-passagedata pid="7" name="PassageHeader" tags="" position="398,198.5" size="100,100">&lt;div style=&quot;float: right;&quot;&gt;&lt;a @href=&quot;encodeURI(decodeURI(document.location.href.match(/(^[^#]*)/)[0])+&#39;#&#39;+passage())&quot; alt=&quot;此頁連結&quot; title=&quot;此頁連結&quot;&gt;#&lt;/a&gt;&lt;/div&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
