--- a/index.html
+++ b/index.html
@@ -627,8 +627,8 @@ $(document).on(':passagerender', function (ev) {
 &lt;&lt;else&gt;&gt;
 	&lt;&lt;include &quot;第一關線索3&quot;&gt;&gt;
 	&lt;&lt;set $textGroup ++&gt;&gt;
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="18" name="第一關線索1" tags="" position="1400,0" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示1&lt;/strong&gt;&quot; t8n&gt;&gt;
-  ----
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="18" name="第一關線索1" tags="" position="1400,0" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
+----
   //拜託嘛！漂亮的大姊姊～～～請告訴我提示！//
   &lt;&lt;timed 1s t8n&gt;&gt;
 	&lt;div class=&quot;say&quot;&gt;
@@ -637,8 +637,8 @@ $(document).on(':passagerender', function (ev) {
 	  &lt;p&gt;嘛嘛嘛，真是個好小子。依循著對聯並彼此相連的話，我想就能看出端倪了！&lt;/p&gt;
 	&lt;/div&gt;
   &lt;&lt;/timed&gt;&gt;
-&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="19" name="第一關線索2" tags="" position="1400,100" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示2&lt;/strong&gt;&quot; t8n&gt;&gt;
-  ----
+&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="19" name="第一關線索2" tags="" position="1400,100" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
+----
   @@color:blue;提示一：依循著對聯並彼此相連的話，我想就能看出端倪了！@@
   //拜託嘛！漂亮的大姊姊～～～再提示多一點嘛！//
 	  &lt;&lt;timed 1s t8n&gt;&gt;
@@ -649,7 +649,7 @@ $(document).on(':passagerender', function (ev) {
 		&lt;/div&gt;
 	   &lt;&lt;/timed&gt;&gt;
   &lt;&lt;set $textGroup += 1&gt;&gt;
-&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="20" name="第一關線索3" tags="" position="1400,200" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示3&lt;/strong&gt;&quot; t8n&gt;&gt;
+&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="20" name="第一關線索3" tags="" position="1400,200" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
 ----
   @@color:blue;提示一：依循著對聯並彼此相連的話，我想就能看出端倪了！@@
   @@color:blue;提示二：將上下聯轉換成的英文字串起來，並加以斷句可以得知「字」是藏在某處之下，找出對應處其下方的文字由左至右排列即為答案。@@
