--- a/index.html
+++ b/index.html
@@ -500,7 +500,15 @@ $(document).on(':passagerender', function (ev) {
 		});
 	}
 });
-/* Delayed Text code - End */</script><tw-passagedata pid="1" name="start" tags="" position="900,100" size="100,100">@@.center;
+/* Delayed Text code - End */
+
+/* 返回前頁開始 */
+predisplay["Menu Return"] = function (taskName) {
+	if (! tags().contains("noreturn")) {
+		State.variables.return = passage();
+	}
+};
+/* 返回前頁結束 */</script><tw-passagedata pid="1" name="start" tags="" position="900,100" size="100,100">@@.center;
 &lt;h1&gt;代天府的挑戰&lt;/h1&gt;
 @@
 &lt;div class=&quot;centered-image&quot;&gt;
@@ -563,13 +571,15 @@ $(document).on(':passagerender', function (ev) {
   &lt;&lt;/button&gt;&gt;\
   &lt;/span&gt;
 &lt;&lt;/switch&gt;&gt;
-&lt;&lt;if def $level1f&gt;&gt;&lt;&lt;set $level1f += 1&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="StoryAuthor" tags="" position="400,300" size="100,100">(製作單位)</tw-passagedata><tw-passagedata pid="3" name="StoryBanner" tags="" position="400,0" size="100,100">&lt;img src=&quot;https://spng.subpng.com/20180329/fwe/kisspng-cat-dog-pet-logo-scratching-post-element-5abc8d9c15ba72.288343631522306460089.jpg&quot; width=&quot;64&quot; height=&quot;64&quot;&gt;</tw-passagedata><tw-passagedata pid="4" name="StoryCaption" tags="" position="400,400" size="100,100"></tw-passagedata><tw-passagedata pid="5" name="StoryDisplayTitle" tags="" position="400,100" size="100,100">遊戲標題</tw-passagedata><tw-passagedata pid="6" name="#StoryInterface" tags="" position="400,700" size="100,100">更改側邊選單的介面樣式</tw-passagedata><tw-passagedata pid="7" name="StoryMenu" tags="" position="400,500" size="100,100">/* 側邊欄選單項目 */
-[[背包|背包]]</tw-passagedata><tw-passagedata pid="8" name="背包" tags="" position="600,500" size="100,100">&lt;&lt;if $inventory.length is 0&gt;&gt;\
+&lt;&lt;if def $level1f&gt;&gt;&lt;&lt;set $level1f += 1&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="StoryAuthor" tags="noreturn" position="400,300" size="100,100">(製作單位)</tw-passagedata><tw-passagedata pid="3" name="StoryBanner" tags="noreturn" position="400,0" size="100,100">&lt;img src=&quot;https://spng.subpng.com/20180329/fwe/kisspng-cat-dog-pet-logo-scratching-post-element-5abc8d9c15ba72.288343631522306460089.jpg&quot; width=&quot;64&quot; height=&quot;64&quot;&gt;</tw-passagedata><tw-passagedata pid="4" name="StoryCaption" tags="noreturn" position="400,400" size="100,100"></tw-passagedata><tw-passagedata pid="5" name="StoryDisplayTitle" tags="noreturn" position="400,100" size="100,100">遊戲標題</tw-passagedata><tw-passagedata pid="6" name="#StoryInterface" tags="noreturn" position="400,700" size="100,100">更改側邊選單的介面樣式</tw-passagedata><tw-passagedata pid="7" name="StoryMenu" tags="noreturn" position="400,500" size="100,100">/* 側邊欄選單項目 */
+[[背包|背包]]</tw-passagedata><tw-passagedata pid="8" name="背包" tags="noreturn" position="600,500" size="100,100">&lt;&lt;if $inventory.length is 0&gt;&gt;\
     什麼都沒有。
 &lt;&lt;else&gt;&gt;\
     背包裡有：
 	&lt;br&gt;&lt;&lt;= $inventory.join(&#39; &lt;br&gt; &#39;)&gt;&gt;
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="9" name="StorySubtitle" tags="" position="400,200" size="100,100">-副標題-</tw-passagedata><tw-passagedata pid="10" name="StoryInit" tags="" position="400,600" size="100,100">/* 設置角色屬性 */
+&lt;&lt;/if&gt;&gt;
+
+[[返回前頁|$return]]</tw-passagedata><tw-passagedata pid="9" name="StorySubtitle" tags="noreturn" position="400,200" size="100,100">-副標題-</tw-passagedata><tw-passagedata pid="10" name="StoryInit" tags="noreturn" position="400,600" size="100,100">/* 設置角色屬性 */
 &lt;&lt;set $hp to 10&gt;&gt; 設置血量
 &lt;&lt;set $money to 20&gt;&gt; 設置金錢
 
@@ -583,19 +593,19 @@ $(document).on(':passagerender', function (ev) {
 &lt;&lt;set $chestOpen to false&gt;&gt; 設置箱子未開啟
 
 /* 關卡提示 */
-&lt;&lt;set $textGroup to 1&gt;&gt;</tw-passagedata><tw-passagedata pid="11" name="PassageHeader" tags="頁首" position="200,0" size="100,100">/* 設定有noheader標籤的片段不會出現頁首內容 */
+&lt;&lt;set $textGroup to 1&gt;&gt;</tw-passagedata><tw-passagedata pid="11" name="PassageHeader" tags="noreturn" position="200,0" size="100,100">/* 設定有noheader標籤的片段不會出現頁首內容 */
 &lt;&lt;if not tags().includes(&quot;noheader&quot;)&gt;&gt;\
 /* 顯示當前片段的網址 */
 &lt;div style=&quot;float: right;&quot;&gt;&lt;a @href=&quot;encodeURI(decodeURI(document.location.href.match(/(^[^#]*)/)[0])+&#39;#&#39;+passage())&quot; alt=&quot;此頁連結&quot; title=&quot;此頁連結&quot;&gt;#&lt;/a&gt;&lt;/div&gt;
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="PassageFooter" tags="" position="200,100" size="100,100">/* 設定有nofooter標籤的片段不會出現頁尾內容 */
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="PassageFooter" tags="noreturn" position="200,100" size="100,100">/* 設定有nofooter標籤的片段不會出現頁尾內容 */
 &lt;&lt;if not tags().includes(&quot;nofooter&quot;)&gt;&gt;
 &lt;br&gt;
-[[回到首頁-&gt;start]]
+[[返回首頁|start]]
 &lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="13" name="第一關正確" tags="" position="900,250" size="100,100">&lt;&lt;unset $textGroup&gt;&gt;
 @@.delayed;答對了！@@
 @@.delayed;女鬼完成了心願@@
 @@.delayed;[[前往第二關|第二關]]@@
-</tw-passagedata><tw-passagedata pid="14" name="branch1" tags="nofooter no-side-bar" position="1100,100" size="100,100">支線碎片1</tw-passagedata><tw-passagedata pid="15" name="第二關" tags="" position="900,400" size="100,100">女鬼給了你一個盒子。
+</tw-passagedata><tw-passagedata pid="14" name="branch1" tags="nofooter no-side-bar noreturn" position="1100,100" size="100,100">支線碎片1</tw-passagedata><tw-passagedata pid="15" name="第二關" tags="" position="900,400" size="100,100">女鬼給了你一個盒子。
 
 &lt;&lt;if not $chestOpen&gt;&gt;\
 	&lt;&lt;timed 2s&gt;&gt;
@@ -627,7 +637,7 @@ $(document).on(':passagerender', function (ev) {
 &lt;&lt;else&gt;&gt;
 	&lt;&lt;include &quot;第一關線索3&quot;&gt;&gt;
 	&lt;&lt;set $textGroup ++&gt;&gt;
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="18" name="第一關線索1" tags="" position="1400,0" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="18" name="第一關線索1" tags="noreturn" position="1400,0" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
 ----
   //拜託嘛！漂亮的大姊姊～～～請告訴我提示！//
   &lt;&lt;timed 1s t8n&gt;&gt;
@@ -637,7 +647,7 @@ $(document).on(':passagerender', function (ev) {
 	  &lt;p&gt;嘛嘛嘛，真是個好小子。依循著對聯並彼此相連的話，我想就能看出端倪了！&lt;/p&gt;
 	&lt;/div&gt;
   &lt;&lt;/timed&gt;&gt;
-&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="19" name="第一關線索2" tags="" position="1400,100" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
+&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="19" name="第一關線索2" tags="noreturn" position="1400,100" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
 ----
   @@color:blue;提示一：依循著對聯並彼此相連的話，我想就能看出端倪了！@@
   //拜託嘛！漂亮的大姊姊～～～再提示多一點嘛！//
@@ -649,7 +659,7 @@ $(document).on(':passagerender', function (ev) {
 		&lt;/div&gt;
 	   &lt;&lt;/timed&gt;&gt;
   &lt;&lt;set $textGroup += 1&gt;&gt;
-&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="20" name="第一關線索3" tags="" position="1400,200" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
+&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="20" name="第一關線索3" tags="noreturn" position="1400,200" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
 ----
   @@color:blue;提示一：依循著對聯並彼此相連的話，我想就能看出端倪了！@@
   @@color:blue;提示二：將上下聯轉換成的英文字串起來，並加以斷句可以得知「字」是藏在某處之下，找出對應處其下方的文字由左至右排列即為答案。@@
