--- a/index.html
+++ b/index.html
@@ -541,7 +541,6 @@ predisplay["Menu Return"] = function (taskName) {
 			  &lt;&lt;goto &quot;第一關正確&quot;&gt;&gt;
 			&lt;&lt;else&gt;&gt;
 			  &lt;&lt;goto &quot;第一關錯誤&quot;&gt;&gt;\
-			  &lt;&lt;set $level1f += 1&gt;&gt;\
 			&lt;&lt;/if&gt;&gt;
 		&lt;&lt;/button&gt;&gt;\
 		&lt;/span&gt;
@@ -566,12 +565,11 @@ predisplay["Menu Return"] = function (taskName) {
 		&lt;&lt;goto &quot;第一關正確&quot;&gt;&gt;
 	&lt;&lt;else&gt;&gt;
 		&lt;&lt;goto &quot;第一關錯誤&quot;&gt;&gt;\
-		&lt;&lt;set $level1f += 1&gt;&gt;\
 	&lt;&lt;/if&gt;&gt;
   &lt;&lt;/button&gt;&gt;\
   &lt;/span&gt;
 &lt;&lt;/switch&gt;&gt;
-&lt;&lt;if def $level1f&gt;&gt;&lt;&lt;set $level1f += 1&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="StoryAuthor" tags="noreturn" position="400,300" size="100,100">(製作單位)</tw-passagedata><tw-passagedata pid="3" name="StoryBanner" tags="noreturn" position="400,0" size="100,100">&lt;img src=&quot;https://spng.subpng.com/20180329/fwe/kisspng-cat-dog-pet-logo-scratching-post-element-5abc8d9c15ba72.288343631522306460089.jpg&quot; width=&quot;64&quot; height=&quot;64&quot;&gt;</tw-passagedata><tw-passagedata pid="4" name="StoryCaption" tags="noreturn" position="400,400" size="100,100"></tw-passagedata><tw-passagedata pid="5" name="StoryDisplayTitle" tags="noreturn" position="400,100" size="100,100">遊戲標題</tw-passagedata><tw-passagedata pid="6" name="#StoryInterface" tags="noreturn" position="400,700" size="100,100">更改側邊選單的介面樣式</tw-passagedata><tw-passagedata pid="7" name="StoryMenu" tags="noreturn" position="400,500" size="100,100">/* 側邊欄選單項目 */
+&lt;&lt;if def $level1f&gt;&gt;&lt;&lt;set $level1f ++&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="StoryAuthor" tags="noreturn" position="400,300" size="100,100">(製作單位)</tw-passagedata><tw-passagedata pid="3" name="StoryBanner" tags="noreturn" position="400,0" size="100,100">&lt;img src=&quot;https://spng.subpng.com/20180329/fwe/kisspng-cat-dog-pet-logo-scratching-post-element-5abc8d9c15ba72.288343631522306460089.jpg&quot; width=&quot;64&quot; height=&quot;64&quot;&gt;</tw-passagedata><tw-passagedata pid="4" name="StoryCaption" tags="noreturn" position="400,400" size="100,100"></tw-passagedata><tw-passagedata pid="5" name="StoryDisplayTitle" tags="noreturn" position="400,100" size="100,100">遊戲標題</tw-passagedata><tw-passagedata pid="6" name="#StoryInterface" tags="noreturn" position="400,700" size="100,100">更改側邊選單的介面樣式</tw-passagedata><tw-passagedata pid="7" name="StoryMenu" tags="noreturn" position="400,500" size="100,100">/* 側邊欄選單項目 */
 [[背包|背包]]</tw-passagedata><tw-passagedata pid="8" name="背包" tags="noreturn" position="600,500" size="100,100">&lt;&lt;if $inventory.length is 0&gt;&gt;\
     什麼都沒有。
 &lt;&lt;else&gt;&gt;\
@@ -628,13 +626,16 @@ predisplay["Menu Return"] = function (taskName) {
 	&lt;p&gt;笑話，這點程度還想拿碎片。該不會看到HERO就自以為是英雄啦？&lt;/p&gt;
   &lt;/div&gt;
   [[再試一次|start]]
-&lt;&lt;if $textGroup == 1&gt;&gt;
+&lt;&lt;if $level1f == 2&gt;&gt;
 	&lt;&lt;include &quot;第一關線索1&quot;&gt;&gt;
-&lt;&lt;elseif $textGroup == 2&gt;&gt;
+&lt;&lt;elseif $level1f == 3&gt;&gt;
 	&lt;&lt;include &quot;第一關線索2&quot;&gt;&gt;
 &lt;&lt;else&gt;&gt;
 	&lt;&lt;include &quot;第一關線索3&quot;&gt;&gt;
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="18" name="第一關線索1" tags="noreturn" position="1400,0" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
+
+</tw-passagedata><tw-passagedata pid="18" name="第一關線索1" tags="noreturn" position="1400,0" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
 ----
   //拜託嘛！漂亮的大姊姊～～～請告訴我提示！//
   &lt;&lt;timed 1s t8n&gt;&gt;
@@ -644,8 +645,7 @@ predisplay["Menu Return"] = function (taskName) {
 	  &lt;p&gt;嘛嘛嘛，真是個好小子。依循著對聯並彼此相連的話，我想就能看出端倪了！&lt;/p&gt;
 	&lt;/div&gt;
   &lt;&lt;/timed&gt;&gt;
-  &lt;&lt;set $textGroup += 1&gt;&gt;
-&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="19" name="第一關線索2" tags="noreturn" position="1400,100" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
+ &lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="19" name="第一關線索2" tags="noreturn" position="1400,100" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
 ----
   @@color:blue;提示一：依循著對聯並彼此相連的話，我想就能看出端倪了！@@
   //拜託嘛！漂亮的大姊姊～～～再提示多一點嘛！//
@@ -656,7 +656,6 @@ predisplay["Menu Return"] = function (taskName) {
 		  &lt;p&gt;真的是拿你沒辦法，將上下聯轉換成的英文字串起來，並加以斷句可以得知「字」是藏在某處之下，找出對應處其下方的文字由左至右排列即為答案。&lt;/p&gt;
 		&lt;/div&gt;
 	   &lt;&lt;/timed&gt;&gt;
-  &lt;&lt;set $textGroup += 1&gt;&gt;
 &lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="20" name="第一關線索3" tags="noreturn" position="1400,200" size="100,100">&lt;&lt;linkreplace &quot;&lt;strong&gt;獲得提示&lt;/strong&gt;&quot; t8n&gt;&gt;
 ----
   @@color:blue;提示一：依循著對聯並彼此相連的話，我想就能看出端倪了！@@
@@ -670,7 +669,6 @@ predisplay["Menu Return"] = function (taskName) {
 		  &lt;/div&gt;
 		 &lt;&lt;/timed&gt;&gt;
   &lt;&lt;/linkappend&gt;&gt;
-  &lt;&lt;set $textGroup += 1&gt;&gt;
 &lt;&lt;/linkreplace&gt;&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
