--- a/index.html
+++ b/index.html
@@ -602,7 +602,9 @@ predisplay["Menu Return"] = function (taskName) {
 @@.delayed;答對了！@@
 @@.delayed;女鬼完成了心願@@
 @@.delayed;[[前往第二關|第二關]]@@
-</tw-passagedata><tw-passagedata pid="14" name="branch1" tags="nofooter no-side-bar noreturn" position="1100,100" size="100,100">支線碎片1</tw-passagedata><tw-passagedata pid="15" name="第二關" tags="" position="900,400" size="100,100">女鬼給了你一個盒子。
+</tw-passagedata><tw-passagedata pid="14" name="branch1" tags="nofooter no-side-bar noreturn" position="1100,100" size="100,100">支線碎片1
+
+(閱讀完後，請關閉此分頁，回到原遊戲頁面)</tw-passagedata><tw-passagedata pid="15" name="第二關" tags="" position="900,400" size="100,100">女鬼給了你一個盒子。
 
 &lt;&lt;if not $chestOpen&gt;&gt;\
 	&lt;&lt;timed 2s&gt;&gt;
