--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ function hashChanged() {
 		}
 		// Comment out the following line of code if you don't want the
 		// title of the page set to the passage name.
-		document.title = passage();
+		//document.title = passage();
 	} else {
 		setTimeout(hashChanged, 100);
 	}
