--- a/branch.html
+++ b/branch.html
@@ -322,10 +322,16 @@ body[data-tags~="no-side-bar"] #ui-bar~#story {
 }
 
 /*背景*/
+html[data-tags~="branch"] {
+height: 100%;
+}
+
 body[data-tags~="branch"] {
 	background-image: url("https://drive.google.com/uc?id=1hW-bieNZBYQkK7fQIkHrFAkdSzFcIGAP");
 	background-repeat: repeat-y;
-	background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+	background-size: 100% 100%;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">/* 特定片段產生連結網址開始 */
 if ("onhashchange" in window) {  // event supported
 	window.onhashchange = function () {
