--- a/branch.html
+++ b/branch.html
@@ -329,7 +329,7 @@ height: 100%;
 body[data-tags~="branch"] {
 	background-image: url("https://drive.google.com/uc?id=1hW-bieNZBYQkK7fQIkHrFAkdSzFcIGAP");
 	background-repeat: repeat-y;
-	background-attachment: fixed;
+	background-attachment: scroll;
 	background-position: center;
 	background-size: 100% 100%;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">/* 特定片段產生連結網址開始 */
