--- a/branch.html
+++ b/branch.html
@@ -322,14 +322,10 @@ body[data-tags~="no-side-bar"] #ui-bar~#story {
 }
 
 /*背景*/
-html[data-tags~="branch"] {
-height: 100%;
-}
-
 body[data-tags~="branch"] {
 	background-image: url("https://drive.google.com/uc?id=1hW-bieNZBYQkK7fQIkHrFAkdSzFcIGAP");
 	background-repeat: repeat-y;
-	background-attachment: scroll;
+	background-attachment: fixed;
 	background-position: center;
 	background-size: 100% 100%;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">/* 特定片段產生連結網址開始 */
