--- a/testv2.html
+++ b/testv2.html
@@ -1767,11 +1767,9 @@ Macro.add('message', {
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;if $title5 is 1&gt;&gt;
 [[第五章|第五章0]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="85" name="背包" tags="noreturn" position="500,800" size="100,100">&lt;&lt;if $inventory.length is 0&gt;&gt;\
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="85" name="背包" tags="noreturn" position="500,800" size="100,100">&lt;&lt;if $inv.length is 0&gt;&gt;
     什麼都沒有。
-&lt;&lt;else&gt;&gt;\
-    背包裡有：
-	&lt;br&gt;&lt;&lt;= $inventory.join(&#39; &lt;br&gt; &#39;)&gt;&gt;
+&lt;&lt;/if&gt;&gt;
 	&lt;&lt;if $inv.has(&#39;法器1&#39;)&gt;&gt;
 	&lt;img src=&quot;https://drive.google.com/uc?id=1CpuV-j6eQrFXAmWdm33-Y-57g-4w7JoU&quot; width=&quot;350&quot; &gt;
 	&lt;&lt;/if&gt;&gt;
@@ -1781,7 +1779,6 @@ Macro.add('message', {
 	&lt;&lt;if $inv.has(&#39;法器3&#39;)&gt;&gt;
 	&lt;img src=&quot;https://drive.google.com/uc?id=1N7EBfm9lkZa7M6oo0pUevj03mOq43sSf&quot; width=&quot;350&quot; &gt;
 	&lt;&lt;/if&gt;&gt;
-&lt;&lt;/if&gt;&gt;
 
 [[返回前頁|$return]]</tw-passagedata><tw-passagedata pid="86" name="StoryInit" tags="noreturn" position="700,900" size="100,100">/* 設置角色屬性 */
 &lt;&lt;set $hp to 10&gt;&gt; 設置血量
@@ -1920,7 +1917,7 @@ Macro.add('message', {
 &lt;&lt;if $dinv.has(&#39;日記碎片5&#39;)&gt;&gt;
 ----
 &lt;&lt;message &quot;&lt;h3&gt;儀式&lt;/h3&gt;&quot;&gt;&gt;
- 	 &lt;&lt;message &#39;日記碎片5&#39;&gt;&gt;
+ 	 &lt;&lt;include &#39;日記碎片5&#39;&gt;&gt;
   &lt;&lt;/message&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -2788,11 +2785,14 @@ Macro.add('message', {
 &lt;img src=&quot;https://drive.google.com/uc?id=1s15aQZ9mgcRV4ltmq5FXnf447dYGDpV5&quot; width=&quot;300&quot;&gt;
 @@</tw-passagedata><tw-passagedata pid="148" name="branch1" tags="branch no-side-bar noreturn noheader- nofooter" position="100,900" size="100,100">你找到了虎牌！
 &lt;img src=&quot;https://drive.google.com/uc?id=1CpuV-j6eQrFXAmWdm33-Y-57g-4w7JoU&quot; width=&quot;350&quot; &gt;
-(閱讀完後請關掉此分頁，回到遊戲頁面)</tw-passagedata><tw-passagedata pid="149" name="branch2" tags="branch no-side-bar noreturn noheader- nofooter" position="200,900" size="100,100">你找到了黑色羽扇！
+(閱讀完後請關掉此分頁，回到遊戲頁面)
+&lt;&lt;pickup &#39;$inv&#39; &#39;法器1&#39;&gt;&gt;</tw-passagedata><tw-passagedata pid="149" name="branch2" tags="branch no-side-bar noreturn noheader- nofooter" position="200,900" size="100,100">你找到了黑色羽扇！
 &lt;img src=&quot;https://drive.google.com/uc?id=1lDx94f-ARxnZo-z_vT356WwVAMnCy88O&quot; width=&quot;350&quot; &gt;
-(閱讀完後請關掉此分頁，回到遊戲頁面)</tw-passagedata><tw-passagedata pid="150" name="branch3" tags="branch no-side-bar noreturn noheader- nofooter" position="300,900" size="100,100">你找到了賞善罰惡帽！
+(閱讀完後請關掉此分頁，回到遊戲頁面)
+&lt;&lt;pickup &#39;$inv&#39; &#39;法器21&#39;&gt;&gt;</tw-passagedata><tw-passagedata pid="150" name="branch3" tags="branch no-side-bar noreturn noheader- nofooter" position="300,900" size="100,100">你找到了賞善罰惡帽！
 &lt;img src=&quot;https://drive.google.com/uc?id=1N7EBfm9lkZa7M6oo0pUevj03mOq43sSf&quot; width=&quot;350&quot; &gt;
-(閱讀完後請關掉此分頁，回到遊戲頁面)</tw-passagedata><tw-passagedata pid="151" name="nobranch" tags="branch no-side-bar noreturn noheader- nofooter" position="100,1000" size="100,100">沒有找到法器，看來找錯地方了……
+(閱讀完後請關掉此分頁，回到遊戲頁面)
+&lt;&lt;pickup &#39;$inv&#39; &#39;法器3&#39;&gt;&gt;</tw-passagedata><tw-passagedata pid="151" name="nobranch" tags="branch no-side-bar noreturn noheader- nofooter" position="100,1000" size="100,100">沒有找到法器，看來找錯地方了……
 
 (閱讀完後請關掉此分頁，回到遊戲頁面)</tw-passagedata><tw-passagedata pid="152" name="不明圖騰" tags="" position="500,600" size="100,100">&lt;&lt;if $face.has(&#39;不明圖騰1&#39;) &gt;&gt;
 &lt;img src=&quot;https://drive.google.com/uc?id=1AZPFhdWd5Oxvr4FQubJWaByUuQmVKkrL&quot; width=&quot;200&quot; &gt;
