--- a/testv3.html
+++ b/testv3.html
@@ -293,6 +293,11 @@ body.radial-gradient {
   border-radius: 8px;
 }
 
+input#textbox-reply {
+    width: 100%;
+    background-color: black;
+}
+
 @media screen and (max-width: 768px) {
 	#story {
 		margin-right: 10px !important;
