--- a/testv3.html
+++ b/testv3.html
@@ -293,8 +293,8 @@ body.radial-gradient {
   border-radius: 8px;
 }
 
-input#textbox-reply {
-    width: 100%;
+input, textarea {
+    width: 60%;
     background-color: black;
 }
 
