--- a/testv3.html
+++ b/testv3.html
@@ -294,8 +294,7 @@ body.radial-gradient {
 }
 
 input, textarea {
-    width: 60%;
-    background-color: black;
+    width: 100px;
 }
 
 @media screen and (max-width: 768px) {
