--- a/testv3.html
+++ b/testv3.html
@@ -293,8 +293,9 @@ body.radial-gradient {
   border-radius: 8px;
 }
 
-input, textarea {
-    width: 100px;
+.passage input[type="text"] {
+min-width: 60%;
+width: 60%;
 }
 
 @media screen and (max-width: 768px) {
