--- a/testv3.html
+++ b/testv3.html
@@ -133,9 +133,6 @@ body[data-tags~="no-side-bar"] #ui-bar {
 	display: none;
 }
 
-body[data-tags~="no-side-bar"] #ui-bar~#story {
-    margin-left: 4.5em;
-}
 /* 隱藏側邊欄結束 */
 
 /* 對話框開始 */
@@ -279,6 +276,8 @@ body.radial-gradient {
 	padding: 20px 50px 40px 50px;
   /* Round off the edges of the textbox */
 	border-radius: 5px;
+  /* Center the box */
+	margin: 0 auto;
 }
 
 #passages button {
