--- a/testv3.html
+++ b/testv3.html
@@ -132,6 +132,9 @@ var saveAs=saveAs||navigator.msSaveBlob&&navigator.msSaveBlob.bind(navigator)||f
 body[data-tags~="no-side-bar"] #ui-bar {
 	display: none;
 }
+body[data-tags~="no-side-bar"] #ui-bar~#story {
+    margin-left: 2em;
+}
 
 /* 隱藏側邊欄結束 */
 
