--- a/testv3.html
+++ b/testv3.html
@@ -2813,21 +2813,19 @@ Macro.add('message', {
 
 &lt;strong&gt;小凡結束信義街的旅程，下一條又會去哪裡？少年與少女的故事還沒有結束。&lt;/strong&gt;
 @@.center;&lt;img src=&quot;https://drive.google.com/uc?id=1s15aQZ9mgcRV4ltmq5FXnf447dYGDpV5&quot; width=&quot;100%&quot;&gt;@@
-結束之前，別忘了享受[[當地美食|https://www.google.com/maps/d/u/0/embed?mid=1kWwYb3_KKCHs1HG5WtWTJ04tSSQAU0m7]]再回去喔～</tw-passagedata><tw-passagedata pid="148" name="branch1" tags="branch no-side-bar noreturn noheader- nofooter autosave" position="100,900" size="100,100">@@.center;你找到了虎牌！
-&lt;&lt;include &#39;虎牌&#39;&gt;&gt;
-(閱讀完後請關掉此分頁，回到遊戲頁面)
+結束之前，別忘了享受[[當地美食|https://www.google.com/maps/d/u/0/embed?mid=1kWwYb3_KKCHs1HG5WtWTJ04tSSQAU0m7]]再回去喔～</tw-passagedata><tw-passagedata pid="148" name="branch1" tags="branch no-side-bar noreturn noheader- nofooter" position="100,900" size="100,100">@@.center;你找到了虎牌！@@
+@@.center;&lt;&lt;include &#39;虎牌&#39;&gt;&gt;@@
+@@.center;(閱讀完後請關掉此分頁，回到遊戲頁面)@@
 &lt;&lt;pickup &#39;$inv&#39; unique &#39;虎牌&#39;&gt;&gt;
-@@
-[[返回前頁|$return]]</tw-passagedata><tw-passagedata pid="149" name="branch2" tags="branch no-side-bar noreturn noheader- nofooter autosave" position="200,900" size="100,100">@@.center;你找到了黑色羽扇！
-&lt;&lt;include &#39;羽扇&#39;&gt;&gt;
-(閱讀完後請關掉此分頁，回到遊戲頁面)
+[[返回前頁|$return]]
+</tw-passagedata><tw-passagedata pid="149" name="branch2" tags="branch no-side-bar noreturn noheader- nofooter" position="200,900" size="100,100">@@.center;你找到了黑色羽扇！@@
+@@.center;&lt;&lt;include &#39;羽扇&#39;&gt;&gt;@@
+@@.center;(閱讀完後請關掉此分頁，回到遊戲頁面)@@
 &lt;&lt;pickup &#39;$inv&#39; unique &#39;黑色羽扇&#39;&gt;&gt;
-@@
-[[返回前頁|$return]]</tw-passagedata><tw-passagedata pid="150" name="branch3" tags="branch no-side-bar noreturn noheader- nofooter autosave" position="300,900" size="100,100">@@.center;你找到了賞善罰惡帽！
-&lt;&lt;include &#39;帽子&#39;&gt;&gt;
-(閱讀完後請關掉此分頁，回到遊戲頁面)
+[[返回前頁|$return]]</tw-passagedata><tw-passagedata pid="150" name="branch3" tags="branch no-side-bar noreturn noheader- nofooter" position="300,900" size="100,100">@@.center;你找到了賞善罰惡帽！@@
+@@.center;&lt;&lt;include &#39;帽子&#39;&gt;&gt;@@
+@@.center;(閱讀完後請關掉此分頁，回到遊戲頁面)@@
 &lt;&lt;pickup &#39;$inv&#39; unique &#39;賞善罰惡帽&#39;&gt;&gt;
-@@
 [[返回前頁|$return]]</tw-passagedata><tw-passagedata pid="151" name="nobranch" tags="branch no-side-bar noreturn noheader- nofooter" position="100,1000" size="100,100">沒有找到法器，看來找錯地方了……
 
 (閱讀完後請關掉此分頁，回到遊戲頁面)</tw-passagedata><tw-passagedata pid="152" name="不明圖騰" tags="face noreturn" position="500,600" size="100,100">&lt;div class=&quot;face&quot;&gt;
