--- a/index.html
+++ b/index.html
@@ -2221,17 +2221,17 @@ window.hashStr = function(txt) {
 你找到了虎牌！
 &lt;&lt;include &#39;虎牌&#39;&gt;&gt;
 (閱讀完後請關掉此分頁，回到遊戲頁面)
-&lt;&lt;pickup &#39;$inv&#39; unique &#39;虎牌&#39;&gt;&gt;
+&lt;&lt;pickup &#39;$inv&#39; &#39;虎牌&#39;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="148" name="branch2" tags="branch no-side-bar noreturn noheader- nofooter autosave" position="200,900" size="100,100">&lt;div align=&#39;center&#39;&gt;\
 你找到了黑色羽扇！
 &lt;&lt;include &#39;羽扇&#39;&gt;&gt;
 (閱讀完後請關掉此分頁，回到遊戲頁面)
-&lt;&lt;pickup &#39;$inv&#39; unique &#39;黑色羽扇&#39;&gt;&gt;
+&lt;&lt;pickup &#39;$inv&#39; &#39;黑色羽扇&#39;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="149" name="branch3" tags="branch no-side-bar noreturn noheader- nofooter autosave" position="300,900" size="100,100">&lt;div align=&#39;center&#39;&gt;\
 你找到了賞善罰惡帽！
 &lt;&lt;include &#39;帽子&#39;&gt;&gt;
 (閱讀完後請關掉此分頁，回到遊戲頁面)
-&lt;&lt;pickup &#39;$inv&#39; unique &#39;賞善罰惡帽&#39;&gt;&gt;
+&lt;&lt;pickup &#39;$inv&#39; &#39;賞善罰惡帽&#39;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="150" name="nobranch" tags="branch no-side-bar noreturn noheader- nofooter" position="100,1000" size="100,100">&lt;div align=&#39;center&#39;&gt;\
 沒有找到法器，看來找錯地方了……
 
